--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
   },
   "rules": {
     "react/jsx-filename-extension": 0,
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "import/prefer-default-export": 0
   }
 }
