--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
   "rules": {
     "react/jsx-filename-extension": 0,
     "import/no-unresolved": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "no-restricted-globals": 0
   }
 }
